[package]
name = "depub"
version = "0.1.0"
authors = ["Laurence Tratt <laurie@tratt.net>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
regex = "1.4"
