[package]
name = "depub"
description = "Reduce function/struct visibility"
version = "0.1.0"
authors = ["Laurence Tratt <laurie@tratt.net>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/softdevteam/depub/"
categories = ["development-tools"]
keywords = ["pub", "visibility"]

[dependencies]
getopts = "0.2"
regex = "1.4"
